Adjusting Login Page Done

--- a/login.html
+++ b/login.html
@@ -15,12 +15,12 @@
             <h5>Guest</h5>
             <!-- From Uiverse.io by kheshore --> 
             <div class="input-with-btn">
-                <button class="logout">
+                <a class="logout" href="/sleep.html">
                     <i class="bi bi-box-arrow-left"></i>
-                </button>
+                </a>
                 <input type="text" placeholder="Name" required>
                 <div class="btn-conteiner">
-                    <a href="#" class="btn-content">
+                    <a href="/main-page.html" class="btn-content">
                         <span class="icon-arrow">
                             <svg
                             xmlns:xlink="http://www.w3.org/1999/xlink"
