--- a/main-page.html
+++ b/main-page.html
@@ -5,12 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Main Page</title>
     <link rel="stylesheet" href="css/main-page.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+    <script src="/js/main-page.js"></script>
 </head>
 <body>
     <div class="menu-bar">
         <div class="menu-left">
             <ul>
-                <img src="assets/menu-bar/apple.png" alt="">
+                <img src="assets/menu-bar/apple.png" alt="Apple Logo">
                 <li>
                     <a href="#">
                         <span class="active">Akhdaan Portfolio</span>
@@ -33,59 +35,64 @@
                 </li>
             </ul>
         </div>
-        <div class="menu-right">        
-            <img src="assets/menu-bar/" alt="WiFi">
-            <img src="assets/menu-bar/" alt="Battery">
-            <img src="assets/menu-bar/" alt="Time">
+        <div class="menu-right">
+            <div class="status-icon">
+                <i class="bi bi-wifi" id="wifi"></i>
+                <span class="tooltip" id="wifi-tooltip">Wi-Fi: Connected</span>
+            </div>
+            <div class="status-icon">
+                <i class="bi bi-battery-full" id="battery"></i>
+                <span class="tooltip" id="battery-tooltip">Battery: 100%</span>
+            </div>
+            <span class="time" id="time">Time: Loading...</span>
         </div>
     </div>
 
     <div class="dock">
         <div class="dock-item">
             <a href="#">
-                <img src="assets/mac-apps/launchpad.png" alt="logo">
+                <img src="assets/mac-apps/launchpad.png" alt="Launchpad">
             </a>
         </div>
         <div class="dock-item">
             <a href="#">
-                <img src="assets/mac-apps/spotify.png" alt="logo">
+                <img src="assets/mac-apps/spotify.png" alt="Spotify">
             </a>
         </div>
         <div class="dock-item">
             <a href="#">
-                <img src="assets/mac-apps/appstore.png" alt="logo">
+                <img src="assets/mac-apps/appstore.png" alt="App Store">
             </a>
         </div>
         <div class="dock-item">
             <a href="#">
-                <img src="assets/mac-apps/gallery.png" alt="logo">
+                <img src="assets/mac-apps/gallery.png" alt="Gallery">
             </a>
         </div>
         <div class="dock-item">
             <a href="#">
-                <img src="assets/mac-apps/mail.png" alt="logo">
+                <img src="assets/mac-apps/mail.png" alt="Mail">
             </a>
         </div>
         <div class="dock-item">
             <a href="#">
-                <img src="assets/mac-apps/discord.png" alt="logo">
+                <img src="assets/mac-apps/discord.png" alt="Discord">
             </a>
         </div>
         <div class="dock-item">
             <a href="#">
-                <img src="assets/mac-apps/settings.png" alt="logo">
+                <img src="assets/mac-apps/settings.png" alt="Settings">
             </a>
         </div>
-        <!-- Pemisah -->
         <div class="separator"></div>
         <div class="dock-item">
             <a href="#">
-                <img src="assets/mac-apps/folder.png" alt="logo">
+                <img src="assets/mac-apps/folder.png" alt="Folder">
             </a>
         </div>
         <div class="dock-item">
             <a href="#">
-                <img src="assets/mac-apps/trash.png" alt="logo">
+                <img src="assets/mac-apps/trash.png" alt="Trash">
             </a>
         </div>
     </div>
