--- a/main-page.html
+++ b/main-page.html
@@ -6,7 +6,8 @@
     <title>Main Page</title>
     <link rel="stylesheet" href="css/main-page.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
-    <script src="/js/main-page.js"></script>
+    <script src="js/main-page.js"></script>
+
 </head>
 <body>
     <div class="menu-bar">
