Adding Launch Pad

--- a/main-page.html
+++ b/main-page.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="css/main-page.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     <script src="js/main-page.js"></script>
-
 </head>
 <body>
     <div class="menu-bar">
@@ -50,7 +49,7 @@
     </div>
 
     <div class="dock">
-        <div class="dock-item">
+        <div class="dock-item" id="launchpad">
             <a href="#">
                 <img src="assets/mac-apps/launchpad.png" alt="Launchpad">
             </a>
@@ -95,6 +94,46 @@
             <a href="#">
                 <img src="assets/mac-apps/trash.png" alt="Trash">
             </a>
+        </div>
+    </div>
+
+    <!-- Launchpad Menu -->
+    <div class="launchpad-menu" id="launchpad-menu">
+        <div class="search-box">
+            <input type="text" placeholder="Search">
+            <button>
+                <i class="bi bi-search"></i>
+            </button>  
+        </div>
+        <div class="launchpad-item"> <img src="assets/mac-apps/spotify.png" alt="Spotify">
+            <p>Spotify</p>
+        </div>
+        <div class="launchpad-item"> <img src="assets/mac-apps/appstore.png" alt="App Store">
+            <p>App Store</p>
+        </div>
+        <div class="launchpad-item"> <img src="assets/mac-apps/gallery.png" alt="Gallery">
+            <p>Gallery</p>
+        </div>
+        <div class="launchpad-item"> <img src="assets/mac-apps/mail.png" alt="Mail">
+            <p>Mail</p>
+        </div>
+        <div class="launchpad-item"> <img src="assets/mac-apps/discord.png" alt="Discord">
+            <p>Discord</p>
+        </div>
+        <div class="launchpad-item"> <img src="assets/mac-apps/settings.png" alt="Settings">
+            <p>Settings</p>
+        </div>
+        <div class="launchpad-item"> <img src="assets/mac-apps/maps.png" alt="Maps">
+            <p>Maps</p>
+        </div>
+        <div class="launchpad-item"> <img src="assets/mac-apps/callendar.png" alt="Callendar">
+            <p>Callendar</p>
+        </div>
+        <div class="launchpad-item"> <img src="assets/mac-apps/terminal.png" alt="Terminal">
+            <p>Terminal</p>
+        </div>
+        <div class="launchpad-item"> <img src="assets/mac-apps/textedit.png" alt="Teext Editor">
+            <p>Text Editor</p>
         </div>
     </div>
 </body>
