Adding Search Box

--- a/main-page.html
+++ b/main-page.html
@@ -100,41 +100,24 @@
     <!-- Launchpad Menu -->
     <div class="launchpad-menu" id="launchpad-menu">
         <div class="search-box">
-            <input type="text" placeholder="Search">
-            <button>
+            <input type="text" id="search-input" placeholder="Search">
+            <button id="search-button" type="button">
                 <i class="bi bi-search"></i>
-            </button>  
+            </button>
         </div>
-        <div class="launchpad-item"> <img src="assets/mac-apps/spotify.png" alt="Spotify">
-            <p>Spotify</p>
+        <div class="no-result" style="display: none; text-align: center; padding: 20px;">
+            No matching apps found
         </div>
-        <div class="launchpad-item"> <img src="assets/mac-apps/appstore.png" alt="App Store">
-            <p>App Store</p>
-        </div>
-        <div class="launchpad-item"> <img src="assets/mac-apps/gallery.png" alt="Gallery">
-            <p>Gallery</p>
-        </div>
-        <div class="launchpad-item"> <img src="assets/mac-apps/mail.png" alt="Mail">
-            <p>Mail</p>
-        </div>
-        <div class="launchpad-item"> <img src="assets/mac-apps/discord.png" alt="Discord">
-            <p>Discord</p>
-        </div>
-        <div class="launchpad-item"> <img src="assets/mac-apps/settings.png" alt="Settings">
-            <p>Settings</p>
-        </div>
-        <div class="launchpad-item"> <img src="assets/mac-apps/maps.png" alt="Maps">
-            <p>Maps</p>
-        </div>
-        <div class="launchpad-item"> <img src="assets/mac-apps/callendar.png" alt="Callendar">
-            <p>Callendar</p>
-        </div>
-        <div class="launchpad-item"> <img src="assets/mac-apps/terminal.png" alt="Terminal">
-            <p>Terminal</p>
-        </div>
-        <div class="launchpad-item"> <img src="assets/mac-apps/textedit.png" alt="Teext Editor">
-            <p>Text Editor</p>
-        </div>
+        <div class="launchpad-item"><img src="assets/mac-apps/spotify.png" alt="Spotify"><p>Spotify</p></div>
+        <div class="launchpad-item"><img src="assets/mac-apps/appstore.png" alt="App Store"><p>App Store</p></div>
+        <div class="launchpad-item"><img src="assets/mac-apps/gallery.png" alt="Gallery"><p>Gallery</p></div>
+        <div class="launchpad-item"><img src="assets/mac-apps/mail.png" alt="Mail"><p>Mail</p></div>
+        <div class="launchpad-item"><img src="assets/mac-apps/discord.png" alt="Discord"><p>Discord</p></div>
+        <div class="launchpad-item"><img src="assets/mac-apps/settings.png" alt="Settings"><p>Settings</p></div>
+        <div class="launchpad-item"><img src="assets/mac-apps/maps.png" alt="Maps"><p>Maps</p></div>
+        <div class="launchpad-item"><img src="assets/mac-apps/callendar.png" alt="Calendar"><p>Calendar</p></div>
+        <div class="launchpad-item"><img src="assets/mac-apps/terminal.png" alt="Terminal"><p>Terminal</p></div>
+        <div class="launchpad-item"><img src="assets/mac-apps/textedit.png" alt="Text Editor"><p>Text Editor</p></div>
     </div>
 </body>
 </html>
