Working On Gallery

--- a/main-page.html
+++ b/main-page.html
@@ -97,7 +97,16 @@
         </div>
     </div>
 
-    <!-- Launchpad Menu -->
+    <!-- Gallery Menu -->
+    <section id="gallery" class="gallery-section">
+        <div class="container">
+          <h2>My Projects</h2>
+          <div class="project-grid" id="project-container">
+            <!-- Projects will be loaded here dynamically -->
+          </div>
+        </div>
+      </section>
+
     <div class="launchpad-menu" id="launchpad-menu">
         <div class="search-box">
             <input type="text" id="search-input" placeholder="Search">
