Adding Icon In Gallery

--- a/main-page.html
+++ b/main-page.html
@@ -6,6 +6,10 @@
     <title>Main Page</title>
     <link rel="stylesheet" href="css/main-page.css" />
     <script src="/js/main-page.js"></script>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+    />
   </head>
   <body>
     <div class="menu-bar">
@@ -113,32 +117,20 @@
           <div class="sidebar-section">
             <h3>Categories</h3>
             <ul>
-              <li class="active">
-                <img src="assets/gallery/icons/all.png" alt="All" /> All
-                Projects
-              </li>
-              <li>
-                <img src="assets/gallery/icons/web.png" alt="Web" /> Web Apps
-              </li>
-              <li>
-                <img src="assets/gallery/icons/mobile.png" alt="Mobile" />
-                Mobile Apps
-              </li>
-              <li>
-                <img src="assets/gallery/icons/design.png" alt="Design" /> UI
-                Designs
-              </li>
+              <li class="active"><i class="bi bi-box-fill"></i>All Projects</li>
+              <li><i class="bi bi-browser-chrome"></i>Web Apps</li>
+              <li><i class="bi bi-phone-fill"></i>Mobile Apps</li>
             </ul>
           </div>
           <div class="sidebar-section">
             <h3>Shortcuts</h3>
             <ul>
               <li>
-                <img src="assets/gallery/icons/recent.png" alt="Recent" />
+                <i class="bi bi-arrow-counterclockwise"></i>
                 Recent
               </li>
               <li>
-                <img src="assets/gallery/icons/featured.png" alt="Featured" />
+                <i class="bi bi-stars"></i>
                 Featured
               </li>
             </ul>
@@ -164,80 +156,66 @@
 
             <div class="project-grid">
               <!-- Project Cards -->
-              <div class="project-card" style="background-color: #ff6b6b">
+              <div class="project-card">
                 <div class="card-icon">
                   <img src="assets/gallery/notetify.png" alt="Notetify" />
                 </div>
                 <div class="card-title">Notetify</div>
               </div>
 
-              <div class="project-card" style="background-color: #4ecdc4">
+              <div class="project-card">
                 <div class="card-icon">
                   <img src="assets/gallery/sulaptugas.png" alt="Sulap Tugas" />
                 </div>
                 <div class="card-title">Sulap Tugas</div>
               </div>
 
-              <div class="project-card" style="background-color: #ffd166">
+              <div class="project-card">
                 <div class="card-icon">
-                  <img src="assets/gallery/placeholder.png" alt="Weather App" />
+                  <img src="assets/gallery/coming-soon.png" alt="Weather App" />
                 </div>
-                <div class="card-title">Weather App</div>
-              </div>
-
-              <div class="project-card" style="background-color: #6a0572">
-                <div class="card-icon">
-                  <img src="assets/gallery/placeholder.png" alt="Portfolio" />
-                </div>
-                <div class="card-title">Portfolio</div>
+                <div class="card-title">Comming Soon</div>
               </div>
             </div>
-          </div>
 
-          <!-- Mobile Apps Section -->
-          <div class="projects-section">
-            <div class="section-header">
-              <h2>Mobile Applications</h2>
-              <a href="#" class="see-all">See All</a>
-            </div>
-
-            <div class="project-grid">
-              <!-- Project Cards -->
-              <div class="project-card" style="background-color: #118ab2">
-                <div class="card-icon">
-                  <img
-                    src="assets/gallery/placeholder.png"
-                    alt="Fitness Tracker"
-                  />
-                </div>
-                <div class="card-title">Fitness Tracker</div>
+            <!-- Mobile Apps Section -->
+            <div class="projects-section">
+              <div class="section-header">
+                <h2>Mobile Applications</h2>
+                <a href="#" class="see-all">See All</a>
               </div>
 
-              <div class="project-card" style="background-color: #073b4c">
-                <div class="card-icon">
-                  <img src="assets/gallery/placeholder.png" alt="Chat App" />
+              <div class="project-grid">
+                <!-- Project Cards -->
+                <div class="project-card">
+                  <div class="card-icon">
+                    <img
+                      src="assets/gallery/coming-soon.png"
+                      alt="Weather App"
+                    />
+                  </div>
+                  <div class="card-title">Comming Soon</div>
                 </div>
-                <div class="card-title">Chat App</div>
-              </div>
 
-              <div class="project-card" style="background-color: #06d6a0">
-                <div class="card-icon">
-                  <img
-                    src="assets/gallery/placeholder.png"
-                    alt="Food Delivery"
-                  />
+                <div class="project-card">
+                  <div class="card-icon">
+                    <img
+                      src="assets/gallery/coming-soon.png"
+                      alt="Weather App"
+                    />
+                  </div>
+                  <div class="card-title">Comming Soon</div>
                 </div>
-                <div class="card-title">Food Delivery</div>
-              </div>
 
-              <div class="project-card" style="background-color: #ef476f">
-                <div class="card-icon">
-                  <img
-                    src="assets/gallery/placeholder.png"
-                    alt="Music Player"
-                  />
+                <div class="project-card">
+                  <div class="card-icon">
+                    <img
+                      src="assets/gallery/coming-soon.png"
+                      alt="Weather App"
+                    />
+                  </div>
+                  <div class="card-title">Comming Soon</div>
                 </div>
-                <div class="card-title">Music Player</div>
               </div>
             </div>
           </div>
